# gnome-sound-recorder

./: Copying  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  gnome-sound-recorder.doap
data/: Makefile.am  POTFILES.skip  application.css  gnome-sound-recorder.desktop.in.in  main.ui  org.gnome.SoundRecorder.Application.desktop.in.in  org.gnome.SoundRecorder.Application.gschema.xml  org.gnome.SoundRecorder.desktop.in  org.gnome.SoundRecorder.desktop.in.in  org.gnome.gnome-sound-recorder.gschema.xml  org.gnome.gnome-sound-recorder.service.in
data/appdata/: Makefile.am  org.gnome.SoundRecorder.appdata.xml.in
data/icons/: Makefile.am
m4/: behave-installed-tests.m4
po/: LINGUAS  POTFILES.in  POTFILES.skip  an.po  ar.po  as.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  nb.po  ne.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+14 more)
src/: Makefile.am  application.js  audioProfile.js  buildFileName.js  fileUtil.js  gnome-sound-recorder.in  info.js  listview.js  main.js  mainWindow.js  org.gnome.SoundRecorder.in  org.gnome.SoundRecorder.src.gresource.xml  org.gnome.gnome-sound-recorder.in  package.js  params.js  play.js  preferences.js  record.js  stateMachine.js  undoDelete.js  util.js  waveform.js
tests/: app_test.feature  common_steps.py  environment.py  testutil.py
tests/steps/: app_test.py
